--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <ul class="nav">
                 <li class="lienMenu"><a style="cursor: pointer;" onclick="window.scrollTo(0,0)"><i class="fa fa-home" aria-hidden="true"></i>&nbsp;Home</a></li>
                 <li class="lienMenu"><a target="_blank" href="https://docs.ajbot.xyz"><i class="fa fa-book" aria-hidden="true"></i>&nbsp;Docs</a></li>
-                <li class="lienMenu-mobile"><a href="./contact.html"><i class="fas fa-comment-alt"></i>&nbsp;Contact Us</a></li>
+                <li class="lienMenu-mobile"><a href="./contact"><i class="fas fa-comment-alt"></i>&nbsp;Contact Us</a></li>
                 <li class="lienMenu"><a target="_blank" href="http://discord.ajbot.xyz"><i class="fab fa-discord"></i>&nbsp;Join Discord</a></li>
                 <li class="lienMenu"><a target="_blank" href="http://vote.ajbot.xyz"><i class="fas fa-vote-yea"></i>&nbsp;Vote</a></li>
                 <li class="lienMenu"><a target="_blank" href="http://invite.ajbot.xyz"><i class="fas fa-user-plus"></i>&nbsp;Invite bot</a></li>
@@ -57,7 +57,7 @@
         <ul class="nav-mobile" id="nav-mobile">
             <li class="lienMenu-mobile"><a style="cursor: pointer;" onclick="window.scrollTo(0,0)"><i class="fa fa-home" aria-hidden="true"></i>&nbsp;Home</a></li>
             <li class="lienMenu-mobile"><a target="_blank" href="https://docs.ajbot.xyz"><i class="fa fa-book" aria-hidden="true"></i>&nbsp;Docs</a></li>
-            <li class="lienMenu-mobile"><a href="./contact.html"><i class="fas fa-comment-alt"></i>&nbsp;Contact Us</a></li>
+            <li class="lienMenu-mobile"><a href="./contact"><i class="fas fa-comment-alt"></i>&nbsp;Contact Us</a></li>
             <li class="lienMenu-mobile"><a target="_blank" href="http://discord.ajbot.xyz"><i class="fab fa-discord"></i>&nbsp;Join Discord</a></li>
             <li class="lienMenu-mobile"><a target="_blank" href="http://vote.ajbot.xyz"><i class="fas fa-vote-yea"></i>&nbsp;Vote</a></li>
             <li class="lienMenu-mobile"><a target="_blank" href="http://invite.ajbot.xyz"><i class="fas fa-user-plus"></i>&nbsp;Invite bot</a></li>
