--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
     <script type="text/javascript" src="./main.js"></script>
     <header>
         <ul class="nav">
-            <li class="lienMenu"><a href="./index"><i class="fa fa-home" aria-hidden="true"></i>&nbsp;Home</a></li>
+            <li class="lienMenu"><a href="/"><i class="fa fa-home" aria-hidden="true"></i>&nbsp;Home</a></li>
             <li class="lienMenu"><a target="_blank" href="https://docs.ajbot.xyz"><i class="fa fa-book"
                         aria-hidden="true"></i>&nbsp;Docs</a></li>
             <li class="lienMenu-mobile"><a style="cursor: pointer" onclick="window.scrollTo(0, 0)"><i class="fas fa-comment-alt"></i>&nbsp;Contact Us</a></li>
@@ -64,7 +64,7 @@
     </header>
 
     <ul class="nav-mobile" id="nav-mobile">
-        <li class="lienMenu-mobile"><a href="./index"><i class="fa fa-home" aria-hidden="true"></i>&nbsp;Home</a>
+        <li class="lienMenu-mobile"><a href="/"><i class="fa fa-home" aria-hidden="true"></i>&nbsp;Home</a>
         </li>
         <li class="lienMenu-mobile"><a target="_blank" href="https://docs.ajbot.xyz"><i class="fa fa-book"
                     aria-hidden="true"></i>&nbsp;Docs</a></li>
