--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -38,12 +38,12 @@
     </head>
 
     <body>
-        <script type="text/javascript" src="./main.js"></script>
+        <script type="text/javascript" src="./main.js" defer></script>
         <header>
             <ul class="nav">
                 <li class="lienMenu"><a style="cursor: pointer;" onclick="window.scrollTo(0,0)"><i class="fa fa-home" aria-hidden="true"></i>&nbsp;Home</a></li>
                 <li class="lienMenu"><a target="_blank" href="https://docs.ajbot.xyz"><i class="fa fa-book" aria-hidden="true"></i>&nbsp;Docs</a></li>
-                <li class="lienMenu-mobile"><a href="./contact"><i class="fas fa-comment-alt"></i>&nbsp;Contact Us</a></li>
+                <li class="lienMenu-mobile"><a href="./contact.html"><i class="fas fa-comment-alt"></i>&nbsp;Contact Us</a></li>
                 <li class="lienMenu"><a target="_blank" href="http://discord.ajbot.xyz"><i class="fab fa-discord"></i>&nbsp;Join Discord</a></li>
                 <li class="lienMenu"><a target="_blank" href="http://vote.ajbot.xyz"><i class="fas fa-vote-yea"></i>&nbsp;Vote</a></li>
                 <li class="lienMenu"><a target="_blank" href="http://invite.ajbot.xyz"><i class="fas fa-user-plus"></i>&nbsp;Invite bot</a></li>
@@ -57,7 +57,7 @@
         <ul class="nav-mobile" id="nav-mobile">
             <li class="lienMenu-mobile"><a style="cursor: pointer;" onclick="window.scrollTo(0,0)"><i class="fa fa-home" aria-hidden="true"></i>&nbsp;Home</a></li>
             <li class="lienMenu-mobile"><a target="_blank" href="https://docs.ajbot.xyz"><i class="fa fa-book" aria-hidden="true"></i>&nbsp;Docs</a></li>
-            <li class="lienMenu-mobile"><a href="./contact"><i class="fas fa-comment-alt"></i>&nbsp;Contact Us</a></li>
+            <li class="lienMenu-mobile"><a href="./contact.html"><i class="fas fa-comment-alt"></i>&nbsp;Contact Us</a></li>
             <li class="lienMenu-mobile"><a target="_blank" href="http://discord.ajbot.xyz"><i class="fab fa-discord"></i>&nbsp;Join Discord</a></li>
             <li class="lienMenu-mobile"><a target="_blank" href="http://vote.ajbot.xyz"><i class="fas fa-vote-yea"></i>&nbsp;Vote</a></li>
             <li class="lienMenu-mobile"><a target="_blank" href="http://invite.ajbot.xyz"><i class="fas fa-user-plus"></i>&nbsp;Invite bot</a></li>
@@ -68,6 +68,7 @@
             <h2>Hi <span class="emoji wave"></span> !</h2>
             <p>Welcome to the website of <strong>AJbot</strong>, a simple Discord bot.</p><br>
             <p>It's a fun bot with lot's of different commands (slice, kill, kiss, hug, smile, cry etc...) You can ask more commands in <a href="http://invite.ajbot.xyz" target="_blank">our&nbsp;server</a> !</p>
+            <p id="servercount">AJbot is in <b id="b-servercount-vrm"></b> servers!</p>
         </section>
 
         <article id="informations">
