--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <h2>Hi <span class="emoji wave"></span> !</h2>
             <p>Welcome to the website of <strong>AJbot</strong>, a simple Discord bot.</p><br>
             <p>It's a fun bot with lot's of different commands (slice, kill, kiss, hug, smile, cry etc...) You can ask more commands in <a href="http://invite.ajbot.xyz" target="_blank">our&nbsp;server</a> !</p>
-            <p id="servercount">AJbot is in <b id="b-servercount-vrm"></b> servers!</p>
+            <!--<p id="servercount">AJbot is in <b id="b-servercount-vrm"></b> servers!</p>-->
         </section>
 
         <article id="informations">
