--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 
           gtag('config', 'UA-197098967-1');
         </script>
+        <script async src="https://arc.io/widget.min.js#ZaJNZxxE"></script>
         <link rel="stylesheet" href="./style.css">
         <title>AJbot</title>
     </head>
