--- a/contact.html
+++ b/contact.html
@@ -39,6 +39,7 @@
         gtag('config', 'UA-197098967-1');
     </script>
     <link rel="stylesheet" href="./style.css">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-197098967-1">
     <title>AJbot</title>
 </head>
 
