--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <script type="text/javascript" src="./main.js" defer></script>
         <script>
             if( window.canRunAds === undefined ){
-                alert('Disable adblock pleaseeeeeeeee')
+                alert('Disable adblock please ^^')
                 window.location.reload();
             }
         </script>
