--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
     </script>
     <link rel="stylesheet" href="./style.css">
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-197098967-1">
-    <script src="./ads-prebid.js">
+    <script src="./ads-prebid.js"></script>
     <title>AJbot</title>
 </head>
 
