--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
         gtag('config', 'UA-197098967-1');
     </script>
     <link rel="stylesheet" href="./style.css">
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-197098967-1">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-197098967-1"></script>
     <script src="./ads-prebid.js"></script>
     <title>AJbot</title>
 </head>
