--- a/contact.html
+++ b/contact.html
@@ -40,6 +40,7 @@
     </script>
     <link rel="stylesheet" href="./style.css">
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-197098967-1"></script>
+    <script async src="https://arc.io/widget.min.js#ZaJNZxxE"></script>
     <script src="./ads-prebid.js"></script>
     <title>AJbot</title>
 </head>
