--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
           gtag('config', 'UA-197098967-1');
         </script>
         <script async src="https://arc.io/widget.min.js#ZaJNZxxE"></script>
+        <script data-ad-client="ca-pub-2998914403804541" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
         <script src="./ads-prebid.js"></script>
         <link rel="stylesheet" href="./style.css">
         <title>AJbot</title>
