--- a/index.html
+++ b/index.html
@@ -182,6 +182,6 @@
                 catch (error) {}
             </script>
         </div>
-        <div class="footer-JSP">Made with <span class="emoji heart"></span> by Kamboo#5722 & Baeka#6495 | Also thanks to "Arc", our sponsor !</div>
+        <div class="footer-JSP">Made with <span class="emoji heart"></span> by Kamboo#5722 & Baeka#6495 | Also thanks to <a href="https://arc.io">Arc</a>, our sponsor !</div>
     </body>
 </html>
